[package]
name = "cs425-final-project"
version = "0.1.0"
authors = ["bkeeneykid <bkeeneykid@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3.0"
postgres = "0.19.1"

env_logger = "0.8"
log = "0.4.14"
